css collapse fixed

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -71,6 +71,7 @@
         .p-container {
             padding: 0.8rem 0.5rem;
             line-height: 1rem;
+            bottom: 0;
             p {
                 font-size: 12px;
             }
